--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </header>
     <main>
         <section>
+            <h1>Mathijs</h1>
             <p>Crafting <span>creative</span>, <span>user‑friendly</span> websites that are both <span>visually engaging</span> and <span>performance‑optimized</span>.</p>
+            <h2>Nijhoff</h2>
         </section>
     </main>
 </body>
