--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
             <p>Crafting <span>creative</span>, <span>user‑friendly</span> websites that are both <span>visually engaging</span> and <span>performance‑optimized</span>.</p>
             <h2>Nijhoff</h2>
         </section>
+
+        <section class="project-section">
+            <ul>
+                <li><a href="#">
+                    <h3>titel project</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure facere atque deserunt adipisci perferendis aliquid labore aspernatur optio doloribus repellendus aut fugit veniam possimus cum eligendi, maxime cupiditate, distinctio ex!</p>
+                    <img src="assets/images/EFM.png" alt="screenshot of the embassy of the free mind homepage"></a></li>
+                <li>
+                    <a href="#">
+                    <h3>titel project</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure facere atque deserunt adipisci perferendis aliquid labore aspernatur optio doloribus repellendus aut fugit veniam possimus cum eligendi, maxime cupiditate, distinctio ex!</p>
+                    <img src="assets/images/EFM.png" alt="screenshot of the embassy of the free mind homepage"></a></li>
+                </li>
+                <li></li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
