--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
 
     <script src="scripts/script.js" defer></script>
 </head>
+
 <body>
     <header>
 
@@ -17,25 +19,20 @@
     <main>
         <section>
             <h1>Mathijs</h1>
-            <p>Crafting <span>creative</span>, <span>user‑friendly</span> websites that are both <span>visually engaging</span> and <span>performance‑optimized</span>.</p>
+            <p>Crafting <span>creative</span>, <span>user‑friendly</span> websites that are both <span>visually
+                    engaging</span> and <span>performance‑optimized</span>.</p>
             <h2>Nijhoff</h2>
         </section>
 
-        <section class="project-section">
-            <ul>
-                <li><a href="#">
-                    <h3>titel project</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure facere atque deserunt adipisci perferendis aliquid labore aspernatur optio doloribus repellendus aut fugit veniam possimus cum eligendi, maxime cupiditate, distinctio ex!</p>
-                    <img src="assets/images/EFM.png" alt="screenshot of the embassy of the free mind homepage"></a></li>
-                <li>
-                    <a href="#">
-                    <h3>titel project</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure facere atque deserunt adipisci perferendis aliquid labore aspernatur optio doloribus repellendus aut fugit veniam possimus cum eligendi, maxime cupiditate, distinctio ex!</p>
-                    <img src="assets/images/EFM.png" alt="screenshot of the embassy of the free mind homepage"></a></li>
-                </li>
-                <li></li>
-            </ul>
+        <section class="project-highlight">
+            <article>
+                <h3>Embassy of the Free Mind</h3>
+                <p>Project desc</p>
+                <a href="#">Naar project</a>
+                <img src="assets/images/EFM.png" alt="Image of project screenshot">
+            </article>
         </section>
     </main>
 </body>
+
 </html>
