animation and color changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <article>
                 <h3>Embassy of the Free Mind</h3>
                 <p>Project desc</p>
-                <a href="#">Naar project</a>
+                <a href="#">To project</a>
                 <img src="assets/images/EFM.png" alt="Image of project screenshot">
             </article>
         </section>
