--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
         </section>
 
         <section class="project-highlight">
+            <h2>/Highlighted Project/</h2>
             <article>
-                <h3>Embassy of the Free Mind</h3>
-                <p>Project desc</p>
+                <h3>/// Embassy of the Free Mind</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo autem fugit quibusdam, accusamus totam omnis.</p>
                 <a href="#">To project</a>
                 <img src="assets/images/EFM.png" alt="Image of project screenshot">
             </article>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci eum ipsam est libero quisquam commodi excepturi odit, accusantium debitis consequuntur atque deleniti repellat sed soluta cumque tempora natus quo laudantium!</p>
         </section>
     </main>
 </body>
