--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </header>
     <main>
         <section>
-            <h1>Mathijs</h1>
+            <h1>/Mathijs</h1>
             <p>Crafting <span>creative</span>, <span>user‑friendly</span> websites that are both <span>visually
                     engaging</span> and <span>performance‑optimized</span>.</p>
-            <h2>Nijhoff</h2>
+            <h2>Nijhoff/</h2>
         </section>
 
         <section class="project-highlight">
@@ -32,7 +32,12 @@
                 <a href="#">To project</a>
                 <img src="assets/images/EFM.png" alt="Image of project screenshot">
             </article>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci eum ipsam est libero quisquam commodi excepturi odit, accusantium debitis consequuntur atque deleniti repellat sed soluta cumque tempora natus quo laudantium!</p>
+            <h2><span>Accessibility</span> is seeing the user beyond your own perspective.</h2>
+        </section>
+
+        <section class="more-projects">
+            <h2>/Recent Projects/</h2>
+            
         </section>
     </main>
 </body>
