infinite looping carousel

--- a/index.html
+++ b/index.html
@@ -35,9 +35,28 @@
             <h2><span>Accessibility</span> is seeing the user beyond your own perspective.</h2>
         </section>
 
+        <h2>/Recent Projects/</h2>
         <section class="more-projects">
-            <h2>/Recent Projects/</h2>
-            
+            <ul>
+                <li><img src="assets/images/EFM.png" alt=""></li>
+                <li><img src="assets/images/voorbeeld.png" alt=""></li>
+                <li><img src="assets/images/EFM.png" alt=""></li>
+                <li><img src="assets/images/voorbeeld.png" alt=""></li>
+                <li><img src="assets/images/EFM.png" alt=""></li>
+                <li><img src="assets/images/voorbeeld.png" alt=""></li>
+                <li><img src="assets/images/EFM.png" alt=""></li>
+                <li><img src="assets/images/voorbeeld.png" alt=""></li>
+            </ul>
+            <ul>
+                <li><img src="assets/images/EFM.png" alt=""></li>
+                <li><img src="assets/images/voorbeeld.png" alt=""></li>
+                <li><img src="assets/images/EFM.png" alt=""></li>
+                <li><img src="assets/images/voorbeeld.png" alt=""></li>
+                <li><img src="assets/images/EFM.png" alt=""></li>
+                <li><img src="assets/images/voorbeeld.png" alt=""></li>
+                <li><img src="assets/images/EFM.png" alt=""></li>
+                <li><img src="assets/images/voorbeeld.png" alt=""></li>
+            </ul>
         </section>
     </main>
 </body>
