--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
                 <a href="#">To project</a>
                 <img src="assets/images/EFM.png" alt="Image of project screenshot">
             </article>
-            <h2><span>Accessibility</span> is seeing the user beyond your own perspective.</h2>
+        </section>
+
+        <section class="about">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia omnis necessitatibus ea animi facilis nobis explicabo perspiciatis incidunt iure aperiam!</p>
+            <h2>Crafting creative, user‑friendly websites that are both visually engaging and performance optimized.</h2>
+            <img src="https://images.unsplash.com/photo-1673694103737-5fd09c9decdc?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image of project 'tennist'">
+            <img src="https://images.unsplash.com/photo-1647252397326-1faae660c85f?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image of project 'abstract'">
         </section>
 
         <h2>/Recent Projects/</h2>
